hphp/hack/test/typecheck/test_array9.php.exp
File "test_array9.php", line 16, characters 16-30:
Could not find method unknownFunction in an object of type A (Typing[4053])
File "test_array9.php", line 15, characters 44-44:
This is why I think it is an object of type A
File "test_array9.php", line 12, characters 7-7:
Declaration of A is here
